# hams_task

./: .env.example  .env.local  .gitignore  AGENT_SETUP_GUIDE.md  DATASET_ANALYSIS_REPORT.md  DATA_GENERATION_GUIDE.md  HUGGINGFACE_GUIDE.md  INTEGRATION_COMPARISON.md  PHASE2_MODEL_SELECTION.md  PIPELINE_GUIDE.md  README.md  README_HF.md  REFACTORING_NOTES.md  SCALING_GUIDE.md  TECHNICAL_REPORT.md  USAGE_GUIDE.md  WINDOWS_SETUP.md  agent.py  agent_with_arabic_turn_detector.py  analyze_dataset.py  arabic_eou_data_generator.py  arabic_eou_detector_optimized.py  arabic_turn_detector_plugin.py  combine_batches.py  conversation_prompts.md  conversation_prompts.txt  eou_data_generator.py  generate_batches.sh  generate_production_dataset.py  generate_standalone.py  hf_dataset_review.txt  main.py  pyproject.toml  requirements.txt  setup_windows.ps1  test_arabic_turn_detector.py  test_eou_balance.py
1_data_prep/: README.md
3_plugin/: README.md
data_prep/: README.md  generate_dataset.py
datasets/splits/: report.txt
docs/: HOW_TO_RUN.md
eou_model/: .gitignore  HUGGINGFACE_DEPLOYMENT.md  QUICKSTART.md  README.md  __init__.py  quantize_model.py  requirements.txt  upload_to_huggingface.py
eou_model/scripts/: convert_to_onnx.py  quantize_model.py  train.py  upload_to_huggingface.py
hams/: prompts.yaml
hams/cli/: asr_augment.py  build_dataset.py  finalize.py  generate.py  split_dataset.py
hams/core/: writer.py  (+6 more)
livekit_plugins_arabic_turn_detector/: .gitignore  INTEGRATION_GUIDE.md  README.md  requirements.txt  setup.py
plugin/: README.md  agent.py  requirements.txt
(+6 files in other folders)
