[project]
name = "hams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.3.0",
    "jsonschema>=4.0.0",
    "numpy>=1.23.0",
    "openai>=2.9.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.20.0",
]
