[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hams*"]
exclude = ["data*", "datasets*", "logs*", "*.egg-info"]

[project]
name = "hams"
version = "0.1.0"
description = "Arabic End-of-Utterance (EOU) Detection Dataset Generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.3.0",
    "jsonschema>=4.0.0",
    "livekit-agents[elevenlabs,google,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "numpy>=1.23.0",
    "openai>=2.9.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.20.0",
    "pyyaml>=6.0",
]

[project.scripts]
hams-generate = "hams.cli.generate:main"
hams-asr-augment = "hams.cli.asr_augment:main"
hams-build = "hams.cli.build_dataset:main"
hams-finalize = "hams.cli.finalize:main"
